# codeknowl

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  local.env
.github/workflows/: backend-smoke-test.yml  vscode-extension-ci.yml
backend/: README.md  pyproject.toml
backend/scripts/: http_smoke_test.sh  smoke_test.sh
backend/src/codeknowl/: __init__.py  __main__.py  app.py  artifacts.py  asgi.py  ask.py  async_service.py  audit.py  auth.py  chunking.py  cli.py  config.py  db.py  embeddings.py  findings.py  findings_ingestion.py  findings_store.py  graph_extractor.py  graph_ingestion.py  graph_store.py  indexing.py  job_status.py  jobs.py  llm.py  metrics.py  poller.py  query.py  queue.py  relationship_service.py  repo.py  reranker.py  service.py  structured_logging.py  symbol_resolver.py  vector_store.py  worker.py
backend/tests/: test_auth.py  test_findings.py  test_http_authz.py  test_qa_synthesis.py  test_relationship_service.py  test_reranker.py
docs/: CODING_STANDARDS_AND_DOD.md  README.md  architecture-and-design.md  buy-vs-build-evaluation-plan.md  codet5-deployment-research-note.md  implementation-plan-tracker.md  iniitial-prompt.md  nebula-graph-deployment-codeknowl.md  prd-revised.md  suggested-hardware-configuration.md  three-node-model-deployment-knowl1-knowl2-knowl3.md
docs/research/: fraunhofer-cpg-research-paper.md  graphdb-comparison-memgraph-neo4j-nebulagraph.md  joern-cpg-research-paper.md  non-cpg-code-rag-feature-review.md  shiftleft-codepropertygraph-research-paper.md
docs/research/competitors/: codeqa.md  codescene.md  sourcegraph.md
docs/research/technology/: itd-register.md  oss-components-commercially-permissible.md
docs/runbooks/: keycloak-setup-codeknowl.md  milestone-2-ide-mvp-validation.md  milestone-3-incremental-updates-validation.md  milestone-6-observability.md  milestone-7-nebulagraph-deployment.md
scripts/: check-docstrings.py
standards/: README.md
vscode-extension/: .eslintignore  .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/test/: runTest.ts
web-ui/: README.md  index.html  package.json  vite.config.ts
web-ui/src/: App.test.tsx  App.tsx  index.css  main.tsx
web-ui/src/components/: Button.tsx  Layout.tsx
web-ui/src/hooks/: useAuth.ts
web-ui/src/pages/: DashboardPage.tsx  IndexingPage.tsx  LoginPage.tsx  QAPage.tsx  RepositoriesPage.tsx  RepositoryDetailPage.tsx
web-ui/src/types/: api.ts
(+3 files in other folders)
