# File: backend/pyproject.toml
# Purpose: Define Python backend packaging, dependencies, and linting configuration.
# Product/business importance: Provides reproducible backend builds and enforces quality gates for CodeKnowl.
#
# Copyright (c) 2026 John K Johansen
# License: MIT (see LICENSE)

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeknowl"
version = "0.0.1"
description = "CodeKnowl backend and CLI (Milestone 1 scaffolding)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CodeKnowl contributors" }]
dependencies = [
  "blacksheep>=2.0.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "tree-sitter==0.20.4",
  "tree-sitter-languages==1.10.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[project.scripts]
codeknowl = "codeknowl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10
